Fixed NavBar menu item spacing

--- a/packages/frontend/src/components/NavBar/NavBar.css
+++ b/packages/frontend/src/components/NavBar/NavBar.css
@@ -36,6 +36,10 @@
   padding: 0;
 }
 
+.nav-bar-menu li {
+  padding: 0 0 0 15px;
+}
+
 @media screen and (max-width: 680px) {
   .nav-bar-contents {
     flex-direction: column;
@@ -44,7 +48,10 @@
 
   .nav-bar-menu ul {
     flex-direction: column;
-    padding-top: 20px;
+  }
+
+  .nav-bar-menu li {
+    padding: 15px 0 0 0;
   }
 
   .nav-bar-menu li * {
